# sso-jwt

./: CLAUDE.md  Cargo.toml  DESIGN.md  NEW_DEFECTS.md  README.md  REPORT.md  SECURITY.md  THREAT-MODEL.md  THREAT_MODEL.md
.github/workflows/: ci.yml  release.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: device_code_response.rs  parse_claims.rs
installer/: sso-jwt.wxs
scripts/: install-wsl.sh
sso-jwt/: Cargo.toml  README.md  build.rs
sso-jwt-lib/: Cargo.toml  README.md
sso-jwt-lib/src/: cache.rs  config.rs  jwt.rs  lib.rs  oauth.rs
sso-jwt-lib/src/secure_storage/: linux.rs  macos.rs  mod.rs  windows.rs  wsl.rs
sso-jwt-lib/tests/: se_roundtrip.rs
sso-jwt-napi/: Cargo.toml  README.md  index.d.ts
sso-jwt-napi/src/: lib.rs
sso-jwt-tpm-bridge/: Cargo.toml  README.md
sso-jwt-tpm-bridge/src/: main.rs  tpm.rs
sso-jwt/src/: cli.rs  config.rs  exec.rs  gh_discovery.rs  main.rs  oauth.rs  shell_init.rs  wsl_install.rs
sso-jwt/tests/: integration.rs
winget/: JGowdy.sso-jwt.installer.yaml  JGowdy.sso-jwt.locale.en-US.yaml  JGowdy.sso-jwt.yaml
