[package]
name = "sso-jwt-tpm-bridge"
version = "0.1.0"
edition = "2021"
description = "Windows TPM 2.0 bridge for sso-jwt WSL support"
license = "MIT"

[dependencies]
anyhow = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security_Cryptography",
] }

[lints]
workspace = true
