[package]
name = "sso-jwt-tpm-bridge"
version.workspace = true
edition.workspace = true
description = "Windows TPM 2.0 bridge for sso-jwt WSL support"
license.workspace = true

[dependencies]
enclaveapp-core = { workspace = true }
enclaveapp-tpm-bridge = { workspace = true }

[lints]
workspace = true
