[package]
name = "sso-jwt"
version = "0.1.0"
edition = "2021"
description = "SSO JWT CLI with hardware-backed secure caching"
license = "MIT"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "6"
open = "5"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
security-framework = "2"
security-framework-sys = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security_Cryptography",
] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
