[package]
name = "sso-jwt"
version.workspace = true
edition.workspace = true
description = "SSO JWT CLI with hardware-backed secure caching"
license.workspace = true

[build-dependencies]
enclaveapp-build-support = { workspace = true }

[dependencies]
enclaveapp-core = { workspace = true }
anyhow = "1"
clap = { workspace = true }
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
sso-jwt-lib = { path = "../sso-jwt-lib" }
enclaveapp-app-storage = { workspace = true }
enclaveapp-wsl = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
